Partial - Adding support for RTL layouts

--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -113,6 +113,8 @@
         android:id="@+id/comment_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
+        android:gravity="start"
         android:paddingBottom="5dp"
         android:textSize="@dimen/comment_body_text_size"
         android:textColor="@color/primary_text"
