--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -29,6 +29,10 @@
 
             <TextView
                 android:id="@+id/link_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:layout_gravity="start"
                 tools:text="The brown fox jumped over the white fence"
                 style="@style/LinkTitleTextView"/>
 
