--- a/app/src/main/res/menu/links_menu.xml
+++ b/app/src/main/res/menu/links_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
-        android:icon="@drawable/ic_action_refresh"
+        android:icon="@drawable/action_refresh"
         app:showAsAction="ifRoom" />
 
     <item
