--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -139,7 +139,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/saved"/>
+                        android:src="@drawable/ic_saved"/>
 
                     <ImageView
                         android:id="@+id/link_stickied_view"
