--- a/app/src/main/res/menu/comment_context_menu.xml
+++ b/app/src/main/res/menu/comment_context_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/action_comment_reply"
         android:title="@string/action_reply"
-        android:icon="@drawable/action_reply"
+        android:icon="@drawable/ic_action_reply"
         app:showAsAction="never"/>
 
     <item
@@ -29,19 +29,19 @@
     <item
         android:id="@+id/action_comment_save"
         android:title="@string/action_save"
-        android:icon="@drawable/action_save"
+        android:icon="@drawable/ic_action_save"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_comment_unsave"
         android:title="@string/action_unsave"
-        android:icon="@drawable/action_save"
+        android:icon="@drawable/ic_action_save"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_comment_share"
         android:title="@string/action_share"
-        android:icon="@drawable/action_share"
+        android:icon="@drawable/ic_action_share"
         app:showAsAction="never"/>
 
     <item
