--- a/app/src/main/res/menu/comments_menu.xml
+++ b/app/src/main/res/menu/comments_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/action_change_sort"
         android:title="@string/action_sort"
-        android:icon="@drawable/change_sort"
+        android:icon="@drawable/ic_change_sort"
         app:showAsAction="ifRoom" />
 
     <item
