--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="link_title_text_size">20sp</dimen>
-    <dimen name="link_domain_text_size">14sp</dimen>
-    <dimen name="link_score_text_size">14sp</dimen>
-    <dimen name="link_author_text_size">14sp</dimen>
-    <dimen name="link_timestamp_text_size">14sp</dimen>
-    <dimen name="link_subreddit_text_size">14sp</dimen>
-    <dimen name="link_comments_text_size">14sp</dimen>
+    <dimen name="link_metadata_text_size">14sp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
     <dimen name="navigation_drawer_elevation">6dp</dimen>
     <dimen name="navigation_drawer_header_height">160dp</dimen>
