--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif-light</item>
-        <item name="android:textSize">@dimen/link_domain_text_size</item>
+        <item name="android:textSize">@dimen/link_metadata_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
         <!--<item name="android:textStyle">italic</item>-->
     </style>
@@ -78,38 +78,8 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="LinkScoreTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/link_score_text_size</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="LinkAuthorTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/link_author_text_size</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="LinkSubredditTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/link_subreddit_text_size</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="LinkTimestampTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/link_timestamp_text_size</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="LinkCommentCountTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/link_comments_text_size</item>
+    <style name="LinkMetadataTextView">
+        <item name="android:textSize">@dimen/link_metadata_text_size</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
