--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -131,14 +131,16 @@
                     android:layout_marginBottom="@dimen/comment_data_divider_margin"
                     android:background="#C4C4C4" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/link_comment_count"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:layout_gravity="start"
                         tools:text="1993 comments"
                         style="@style/LinkMetadataTextView"/>
@@ -160,7 +162,7 @@
                         android:layout_toLeftOf="@id/link_saved_view"
                         android:src="@drawable/ic_stickied"/>
 
-                </RelativeLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
