--- a/app/src/main/res/drawable/comment_expander_bg.xml
+++ b/app/src/main/res/drawable/comment_expander_bg.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
     <stroke
         android:width="1dp"
         android:color="@color/primary_light" />
+
+    <solid
+        android:color="@color/transparent" />
 
 </shape>
