--- a/app/src/main/res/drawable/thumbnail_bg.xml
+++ b/app/src/main/res/drawable/thumbnail_bg.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
@@ -10,5 +14,8 @@
         android:bottom="1dp"
         android:left="1dp"
         android:right="1dp"/>
+
+    <solid
+        android:color="@color/transparent" />
 
 </shape>
