Partial - Adding strings for reddit settings

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,4 +36,16 @@
         <item>all</item>
     </string-array>
 
+    <string-array name="pref_media_options">
+        <item>show thumbnails next to links</item>
+        <item>don't show thumbnails next to links</item>
+        <item>show thumbnails based on that subreddit\'s media preferences</item>
+    </string-array>
+
+    <string-array name="pref_media_option_values">
+        <item>on</item>
+        <item>off</item>
+        <item>subreddit</item>
+    </string-array>
+
 </resources>
