--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,19 +21,28 @@
         android:title="@string/preferences_reddit">
 
         <ListPreference
-            android:key="pref_lang"/>
+            android:key="pref_lang"
+            android:title="@string/pref_lang"
+            android:summary="@string/pref_lang_summary"/>
 
         <CheckBoxPreference
-            android:key="pref_newwindow"/>
+            android:key="pref_newwindow"
+            android:title="@string/pref_newwindow"/>
 
         <PreferenceScreen
             android:title="media">
 
             <ListPreference
-                android:key="pref_media"/> <!-- show thumbnails next to links -->
+                android:key="pref_media"
+                android:title="@string/pref_media"
+                android:dialogTitle="@string/pref_media"
+                android:entries="@array/pref_media_options"
+                android:entryValues="@array/pref_media_option_values"
+                android:summary="%s"/> <!-- show thumbnails next to links -->
 
             <CheckBoxPreference
-                android:key="pref_no_profanity"/> <!-- Make safe(r) for work -->
+                android:key="pref_no_profanity"
+                android:title="@string/pref_no_profanity"/> <!-- Make safe(r) for work -->
 
         </PreferenceScreen>
 
@@ -41,31 +50,40 @@
             android:title="link options">
 
             <CheckBoxPreference
-                android:key="pref_organic"/> <!-- show spotlight box on front page -->
+                android:key="pref_organic"
+                android:title="@string/pref_organic"/> <!-- show spotlight box on front page -->
 
             <CheckBoxPreference
-                android:key="pref_show_trending"/>
+                android:key="pref_show_trending"
+                android:title="@string/pref_show_trending"/>
 
             <CheckBoxPreference
-                android:key="pref_clickgadget"/>
+                android:key="pref_clickgadget"
+                android:title="@string/pref_clickgadget"/>
 
             <CheckBoxPreference
-                android:key="pref_compress"/>
+                android:key="pref_compress"
+                android:title="@string/pref_compress"/>
 
             <CheckBoxPreference
-                android:key="pref_domain_details"/>
+                android:key="pref_domain_details"
+                android:title="@string/pref_domain_details"/>
 
             <CheckBoxPreference
-                android:key="pref_hide_ups"/>
+                android:key="pref_hide_ups"
+                android:title="@string/pref_hide_ups"/>
 
             <CheckBoxPreference
-                android:key="pref_hide_downs"/>
+                android:key="pref_hide_downs"
+                android:title="@string/pref_hide_downs"/>
 
             <EditTextPreference
-                android:key="pref_numsites"/>
+                android:key="pref_numsites"
+                android:title="@string/pref_numsites"/>
 
             <EditTextPreference
-                android:key="pref_min_link_score"/>
+                android:key="pref_min_link_score"
+                android:title="@string/pref_min_link_score"/>
 
         </PreferenceScreen>
 
@@ -82,16 +100,20 @@
                 android:summary="%s" />
 
             <CheckBoxPreference
-                android:key="pref_ignore_suggested_sort"/>
+                android:key="pref_ignore_suggested_sort"
+                android:title="@string/pref_ignore_suggested_sort"/>
 
             <CheckBoxPreference
-                android:key="pref_highlight_controversial"/>
+                android:key="pref_highlight_controversial"
+                android:title="@string/pref_highlight_controversial"/>
 
             <EditTextPreference
-                android:key="pref_min_comment_score"/>
+                android:key="pref_min_comment_score"
+                android:title="@string/pref_min_comment_score"/>
 
             <EditTextPreference
-                android:key="pref_num_comments"/>
+                android:key="pref_num_comments"
+                android:title="@string/pref_num_comments"/>
 
         </PreferenceScreen>
 
@@ -99,16 +121,20 @@
             android:title="messaging options">
 
             <CheckBoxPreference
-                android:key="pref_threaded_messages"/>
+                android:key="pref_threaded_messages"
+                android:title="@string/pref_threaded_messages"/>
 
             <CheckBoxPreference
-                android:key="pref_collapse_read_messages"/>
+                android:key="pref_collapse_read_messages"
+                android:title="@string/pref_collapse_read_messages"/>
 
             <CheckBoxPreference
-                android:key="pref_mark_messages_read"/>
+                android:key="pref_mark_messages_read"
+                android:title="@string/pref_mark_messages_read"/>
 
             <CheckBoxPreference
-                android:key="pref_monitor_mentions"/>
+                android:key="pref_monitor_mentions"
+                android:title="@string/pref_monitor_mentions"/>
 
         </PreferenceScreen>
 
@@ -116,13 +142,16 @@
             android:title="display options">
 
             <CheckBoxPreference
-                android:key="pref_enable_default_themes"/> <!-- allow subreddits to show me custom themes -->
+                android:key="pref_enable_default_themes"
+                android:title="@string/pref_enable_default_themes"/> <!-- allow subreddits to show me custom themes -->
 
             <CheckBoxPreference
-                android:key="pref_show_flair"/>
+                android:key="pref_show_flair"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_show_link_flair"/>
+                android:key="pref_show_link_flair"
+                android:title="@string/"/>
 
         </PreferenceScreen>
 
@@ -130,13 +159,16 @@
             android:title="content options">
 
             <CheckBoxPreference
-                android:key="pref_over_18"/>
+                android:key="pref_over_18"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_label_nsfw"/>
+                android:key="pref_label_nsfw"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_private_feeds"/>
+                android:key="pref_private_feeds"
+                android:title="@string/"/>
 
         </PreferenceScreen>
 
@@ -144,36 +176,45 @@
             android:title="privacy options">
 
             <CheckBoxPreference
-                android:key="pref_public_votes"/>
+                android:key="pref_public_votes"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_research"/>
+                android:key="pref_research"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_hide_from_robots"/>
+                android:key="pref_hide_from_robots"
+                android:title="@string/"/>
 
         </PreferenceScreen>
 
         <CheckBoxPreference
-            android:key="pref_beta"/>
+            android:key="pref_beta"
+            android:title="@string/"/>
 
         <PreferenceScreen
             android:title="gold options">
 
             <CheckBoxPreference
-                android:key="pref_hide_ads"/>
+                android:key="pref_hide_ads"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_store_visits"/>
+                android:key="pref_store_visits"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_highlight_new_comments"/>
+                android:key="pref_highlight_new_comments"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_show_gold_expiration"/>
+                android:key="pref_show_gold_expiration"
+                android:title="@string/"/>
 
             <CheckBoxPreference
-                android:key="pref_creddit_autorenew"/>
+                android:key="pref_creddit_autorenew"
+                android:title="@string/"/>
 
         </PreferenceScreen>
 <!--
