--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:key="prefs_user">
+                  android:key="prefs_user">
 
     <!-- Show these to all users -->
     <PreferenceCategory
@@ -15,209 +15,206 @@
 
     </PreferenceCategory>
 
-    <!-- If user is not signed in, we do not show these -->
+<!--    <ListPreference
+        android:key="pref_lang"
+        android:title="@string/pref_lang"
+        android:summary="@string/pref_lang_summary"/>-->
+
+<!--    <CheckBoxPreference
+        android:key="pref_newwindow"
+        android:title="@string/pref_newwindow"/>-->
+
     <PreferenceCategory
-        android:key="prefs_reddit"
-        android:title="@string/preferences_reddit">
+        android:title="media">
 
         <ListPreference
-            android:key="pref_lang"
-            android:title="@string/pref_lang"
-            android:summary="@string/pref_lang_summary"/>
+            android:key="pref_media"
+            android:title="@string/pref_media"
+            android:dialogTitle="@string/pref_media"
+            android:entries="@array/pref_media_options"
+            android:entryValues="@array/pref_media_option_values"
+            android:summary="%s"/> <!-- show thumbnails next to links -->
 
         <CheckBoxPreference
-            android:key="pref_newwindow"
-            android:title="@string/pref_newwindow"/>
+            android:key="pref_no_profanity"
+            android:title="@string/pref_no_profanity"/> <!-- Make safe(r) for work -->
 
-        <PreferenceScreen
-            android:title="media">
+    </PreferenceCategory>
 
-            <ListPreference
-                android:key="pref_media"
-                android:title="@string/pref_media"
-                android:dialogTitle="@string/pref_media"
-                android:entries="@array/pref_media_options"
-                android:entryValues="@array/pref_media_option_values"
-                android:summary="%s"/> <!-- show thumbnails next to links -->
+    <PreferenceCategory
+        android:title="link options">
 
-            <CheckBoxPreference
-                android:key="pref_no_profanity"
-                android:title="@string/pref_no_profanity"/> <!-- Make safe(r) for work -->
+<!--        <CheckBoxPreference
+            android:key="pref_organic"
+            android:title="@string/pref_organic"/>--> <!-- show spotlight box on front page -->
 
-        </PreferenceScreen>
+<!--        <CheckBoxPreference
+            android:key="pref_show_trending"
+            android:title="@string/pref_show_trending"/>-->
 
-        <PreferenceScreen
-            android:title="link options">
-
-            <CheckBoxPreference
-                android:key="pref_organic"
-                android:title="@string/pref_organic"/> <!-- show spotlight box on front page -->
-
-            <CheckBoxPreference
-                android:key="pref_show_trending"
-                android:title="@string/pref_show_trending"/>
-
-            <CheckBoxPreference
-                android:key="pref_clickgadget"
-                android:title="@string/pref_clickgadget"/>
-
-            <CheckBoxPreference
-                android:key="pref_compress"
-                android:title="@string/pref_compress"/>
-
-            <CheckBoxPreference
-                android:key="pref_domain_details"
-                android:title="@string/pref_domain_details"/>
-
-            <CheckBoxPreference
-                android:key="pref_hide_ups"
-                android:title="@string/pref_hide_ups"/>
-
-            <CheckBoxPreference
-                android:key="pref_hide_downs"
-                android:title="@string/pref_hide_downs"/>
-
-            <EditTextPreference
-                android:key="pref_numsites"
-                android:title="@string/pref_numsites"/>
-
-            <EditTextPreference
-                android:key="pref_min_link_score"
-                android:title="@string/pref_min_link_score"/>
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="comment options">
-
-            <ListPreference
-                android:key="pref_default_comment_sort"
-                android:title="@string/dialog_settings_default_comment_sort"
-                android:dialogTitle="@string/dialog_settings_default_comment_sort"
-                android:entries="@array/comment_sort_options"
-                android:entryValues="@array/comment_sort_option_values"
-                android:defaultValue="@string/default_comment_sort"
-                android:summary="%s" />
-
-            <CheckBoxPreference
-                android:key="pref_ignore_suggested_sort"
-                android:title="@string/pref_ignore_suggested_sort"/>
-
-            <CheckBoxPreference
-                android:key="pref_highlight_controversial"
-                android:title="@string/pref_highlight_controversial"/>
-
-            <EditTextPreference
-                android:key="pref_min_comment_score"
-                android:title="@string/pref_min_comment_score"/>
-
-            <EditTextPreference
-                android:key="pref_num_comments"
-                android:title="@string/pref_num_comments"/>
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="messaging options">
-
-            <CheckBoxPreference
-                android:key="pref_threaded_messages"
-                android:title="@string/pref_threaded_messages"/>
-
-            <CheckBoxPreference
-                android:key="pref_collapse_read_messages"
-                android:title="@string/pref_collapse_read_messages"/>
-
-            <CheckBoxPreference
-                android:key="pref_mark_messages_read"
-                android:title="@string/pref_mark_messages_read"/>
-
-            <CheckBoxPreference
-                android:key="pref_monitor_mentions"
-                android:title="@string/pref_monitor_mentions"/>
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="display options">
-
-            <CheckBoxPreference
-                android:key="pref_enable_default_themes"
-                android:title="@string/pref_enable_default_themes"/> <!-- allow subreddits to show me custom themes -->
-
-            <CheckBoxPreference
-                android:key="pref_show_flair"
-                android:title="@string/"/>
-
-            <CheckBoxPreference
-                android:key="pref_show_link_flair"
-                android:title="@string/"/>
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="content options">
-
-            <CheckBoxPreference
-                android:key="pref_over_18"
-                android:title="@string/"/>
-
-            <CheckBoxPreference
-                android:key="pref_label_nsfw"
-                android:title="@string/"/>
-
-            <CheckBoxPreference
-                android:key="pref_private_feeds"
-                android:title="@string/"/>
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="privacy options">
-
-            <CheckBoxPreference
-                android:key="pref_public_votes"
-                android:title="@string/"/>
-
-            <CheckBoxPreference
-                android:key="pref_research"
-                android:title="@string/"/>
-
-            <CheckBoxPreference
-                android:key="pref_hide_from_robots"
-                android:title="@string/"/>
-
-        </PreferenceScreen>
+<!--        <CheckBoxPreference
+            android:key="pref_clickgadget"
+            android:title="@string/pref_clickgadget"/>-->
 
         <CheckBoxPreference
-            android:key="pref_beta"
-            android:title="@string/"/>
+            android:key="pref_compress"
+            android:title="@string/pref_compress"/>
 
-        <PreferenceScreen
-            android:title="gold options">
+        <CheckBoxPreference
+            android:key="pref_domain_details"
+            android:title="@string/pref_domain_details"/>
 
-            <CheckBoxPreference
-                android:key="pref_hide_ads"
-                android:title="@string/"/>
+        <CheckBoxPreference
+            android:key="pref_hide_ups"
+            android:title="@string/pref_hide_ups"/>
 
-            <CheckBoxPreference
-                android:key="pref_store_visits"
-                android:title="@string/"/>
+        <CheckBoxPreference
+            android:key="pref_hide_downs"
+            android:title="@string/pref_hide_downs"/>
 
-            <CheckBoxPreference
-                android:key="pref_highlight_new_comments"
-                android:title="@string/"/>
+        <EditTextPreference
+            android:key="pref_numsites"
+            android:title="@string/pref_numsites"/>
 
-            <CheckBoxPreference
-                android:key="pref_show_gold_expiration"
-                android:title="@string/"/>
+        <EditTextPreference
+            android:key="pref_min_link_score"
+            android:title="@string/pref_min_link_score"/>
 
-            <CheckBoxPreference
-                android:key="pref_creddit_autorenew"
-                android:title="@string/"/>
+    </PreferenceCategory>
 
-        </PreferenceScreen>
-<!--
+    <PreferenceCategory
+        android:title="comment options">
+
+        <ListPreference
+            android:key="pref_default_comment_sort"
+            android:title="@string/dialog_settings_default_comment_sort"
+            android:dialogTitle="@string/dialog_settings_default_comment_sort"
+            android:entries="@array/comment_sort_options"
+            android:entryValues="@array/comment_sort_option_values"
+            android:defaultValue="@string/default_comment_sort"
+            android:summary="%s" />
+
+<!--        <CheckBoxPreference
+            android:key="pref_ignore_suggested_sort"
+            android:title="@string/pref_ignore_suggested_sort"/>-->
+
+        <CheckBoxPreference
+            android:key="pref_highlight_controversial"
+            android:title="@string/pref_highlight_controversial"/>
+
+        <EditTextPreference
+            android:key="pref_min_comment_score"
+            android:title="@string/pref_min_comment_score"/>
+
+        <EditTextPreference
+            android:key="pref_num_comments"
+            android:title="@string/pref_num_comments"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="messaging options">
+
+        <CheckBoxPreference
+            android:key="pref_threaded_messages"
+            android:title="@string/pref_threaded_messages"/>
+
+        <CheckBoxPreference
+            android:key="pref_collapse_read_messages"
+            android:title="@string/pref_collapse_read_messages"/>
+
+        <CheckBoxPreference
+            android:key="pref_mark_messages_read"
+            android:title="@string/pref_mark_messages_read"/>
+
+        <CheckBoxPreference
+            android:key="pref_monitor_mentions"
+            android:title="@string/pref_monitor_mentions"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="display options">
+
+<!--        <CheckBoxPreference
+            android:key="pref_enable_default_themes"
+            android:title="@string/pref_enable_default_themes"/>--> <!-- allow subreddits to show me custom themes -->
+
+        <CheckBoxPreference
+            android:key="pref_show_flair"
+            android:title="@string/pref_show_flair"/>
+
+        <CheckBoxPreference
+            android:key="pref_show_link_flair"
+            android:title="@string/pref_show_link_flair"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="content options">
+
+        <CheckBoxPreference
+            android:key="pref_over_18"
+            android:title="@string/pref_over_18"/>
+
+        <CheckBoxPreference
+            android:key="pref_label_nsfw"
+            android:title="@string/pref_label_nsfw"
+            android:summary="@string/pref_label_nsfw_summary"/>
+
+<!--        <CheckBoxPreference
+            android:key="pref_private_feeds"
+            android:title="@string/pref_private_feeds"/>-->
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="privacy options">
+
+        <CheckBoxPreference
+            android:key="pref_public_votes"
+            android:title="@string/pref_public_votes"/>
+
+        <CheckBoxPreference
+            android:key="pref_research"
+            android:title="@string/pref_research"/>
+
+        <CheckBoxPreference
+            android:key="pref_hide_from_robots"
+            android:title="@string/pref_hide_from_robots"/>
+
+    </PreferenceCategory>
+
+    <CheckBoxPreference
+        android:key="pref_beta"
+        android:title="@string/pref_beta"/>
+
+    <PreferenceCategory
+        android:title="gold options">
+
+<!--        <CheckBoxPreference
+            android:key="pref_hide_ads"
+            android:title="@string/pref_hide_ads"/>-->
+
+        <CheckBoxPreference
+            android:key="pref_store_visits"
+            android:title="@string/pref_store_visits"/>
+
+<!--        <CheckBoxPreference
+            android:key="pref_highlight_new_comments"
+            android:title="@string/pref_highlight_new_comments"/>-->
+
+        <CheckBoxPreference
+            android:key="pref_show_gold_expiration"
+            android:title="@string/pref_show_gold_expiration"/>
+
+        <CheckBoxPreference
+            android:key="pref_creddit_autorenew"
+            android:title="@string/pref_creddit_autorenew"/>
+
+    </PreferenceCategory>
+
+    <!--
         <CheckBoxPreference
             android:key="pref_email_messages"/>
 
@@ -235,7 +232,5 @@
 
         <CheckBoxPreference
             android:key="pref_use_global_defaults"/>-->
-
-    </PreferenceCategory>
 
 </PreferenceScreen>
