--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,20 +2,26 @@
 <resources>
 
     <string-array name="link_sort_options">
+        <item>@string/link_sort_hot</item>
+        <item>@string/link_sort_new</item>
+        <item>@string/link_sort_top</item>
+        <item>@string/link_sort_controversial</item>
+    </string-array>
+
+    <string-array name="link_sort_option_values">
         <item>hot</item>
         <item>new</item>
-        <!--<item>rising</item>-->
         <item>top</item>
         <item>controversial</item>
     </string-array>
 
     <string-array name="comment_sort_options">
-        <item>best</item>
-        <item>top</item>
-        <item>new</item>
-        <item>controversial</item>
-        <item>old</item>
-        <item>q&#38;a</item>
+        <item>@string/comment_sort_best</item>
+        <item>@string/comment_sort_top</item>
+        <item>@string/comment_sort_new</item>
+        <item>@string/comment_sort_controversial</item>
+        <item>@string/comment_sort_old</item>
+        <item>@string/comment_sort_qa</item>
     </string-array>
 
     <string-array name="comment_sort_option_values">
@@ -28,18 +34,18 @@
     </string-array>
 
     <string-array name="timespan_options">
-        <item>hour</item>
-        <item>day</item>
-        <item>week</item>
-        <item>month</item>
-        <item>year</item>
-        <item>all</item>
+        <item>@string/timespan_hour</item>
+        <item>@string/timespan_day</item>
+        <item>@string/timespan_week</item>
+        <item>@string/timespan_month</item>
+        <item>@string/timespan_year</item>
+        <item>@string/timespan_all</item>
     </string-array>
 
     <string-array name="pref_media_options">
-        <item>show thumbnails next to links</item>
-        <item>don\'t show thumbnails next to links</item>
-        <item>show thumbnails based on that subreddit\'s media preferences</item>
+        <item>@string/pref_media_on</item>
+        <item>@string/pref_media_off</item>
+        <item>@string/pref_media_subreddit</item>
     </string-array>
 
     <string-array name="pref_media_option_values">
